--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rails-simple-airbnb",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1"
+    "bootstrap": "^4.3.1",
+    "mapbox-gl": "^0.54.0"
   }
 }
